@@ -1,10 +1,0 @@
-	AREA	|C$$code|, CODE, READONLY
-
-	EXPORT	floorl
-floorl
-	STMFD	sp!, {a1, a2}
-	LDFD	f0, [sp], #8
-	RNDDM	f0, f0
-	MOV	pc, lr
-
-	END
